work more on layout issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -53,6 +53,7 @@ h6 {
 @media (min-width: 1120px) {
   .contentContainer {
     max-width: 1120px;
+    width: 100%;
   }
 }
 
